[tool.poetry]
name = "gaphor_mdimport_plugin"
version = "0.1.0"
description = "Plugin for importing MagicDraw modles"
authors = ["Paul C. Brown <pbrown12303@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
# Gaphor should be a dev-dependency, so it's not installed as part of the plugin
gaphor = "^2.23"
pytest = "^8.3"

[tool.poetry.plugins."gaphor.services"]
"mdimport" = "gaphor_mdimport_plugin:MDImportPlugin"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
